--- a/work.html
+++ b/work.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="assets/ico/favicon.ico">
 
-    <title>INSTANT - Bootstrap Theme</title>
+    <title>Christen Note</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -117,7 +117,7 @@
 					<p>Living in the amazing London.</p>
 				</div>
 				<div class="col-lg-4">
-					<p>hello@instant.com</p>
+					<p>admin@chenzixin.com</p>
 				</div>
 			
 			</div>
