Signed-off-by: hiclick <hiczx@qq.com>

--- a/about.html
+++ b/about.html
@@ -62,13 +62,17 @@
 	</div><! --/aboutwrap -->
 	
 	<div class="container">
-		<div class="row centered mt mb">
+		<div class="row left mt mb">
 			<div class="col-lg-8 col-lg-offset-2">
-				<h2>PAUL SILVA</h2>
-				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
-				<p>It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-				<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
-			</div>
+				<h2>Christen</h2>
+                <p>My name is <a href="http://chenzixin.com">Chen Zixin</a><sup><span class="glyphicon glyphicon-link" aria-hidden="true"></span></sup>, I am a Chinese software engineer currently living in Dongcheng District of Beijing with my wifi and a cat.</p>
+
+                <p>When I was young, I wanted to be a lawyer. That was before I got a job as a game editor in <a href="http://www.pconline.cn">PConline</a><sup><span class="glyphicon glyphicon-link" aria-hidden="true"></span></sup> since early 2004. From then on, I seized the good opportunity to take part in web application design, and interact with programers. As time goes on, I knew I would be a developer. I never stopped writing code since May 25, 2007. Many thanks to Alan, Neil and Guitang Yang.</p>
+
+                <p>I still enjoy Chinese Ancient Culture and Hard Pen Calligraphic. It’s probably because I used to be a liberal art student in <a href="http://www.hust.edu.cn">Hust</a><small> </small><sup><span class="glyphicon glyphicon-link" aria-hidden="true"></span></sup>.</p>
+
+                <p>You can contact me via email: admin#chenzixin.com</p>
+                </div>
 
 		</div><! --/row -->
 	</div><! --/container -->
