Signed-off-by: hiclick <hiczx@qq.com>

--- a/about.html
+++ b/about.html
@@ -103,24 +103,22 @@
 		</div><! --/container -->
 	</div><! --/social -->
 
-	<div id="footerwrap">
-		<div class="container">
-			<div class="row centered">
-				<div class="col-lg-4">
-					<p><b>WEB DESIGNER, DEVELOPER & GAME ADDICT</b></p>
-				</div>
-			
-				<div class="col-lg-4">
-					<p>Living in the amazing London.</p>
-				</div>
-				<div class="col-lg-4">
-					<p>admin@chenzixin.com</p>
-				</div>
-			
-			</div>
-		
-		</div>
-	</div><! --/footerwrap -->
+    <div id="footerwrap">
+        <div class="container">
+            <div class="row centered">
+                <div class="col-lg-4">
+                    <p><b>WEB DEVELOPER & TECHNICAL SUPPORT</b></p>
+                </div>
+
+                <div class="col-lg-4">
+                    <p>Living in the terrible Beijing.</p>
+                </div>
+                <div class="col-lg-4">
+                    <p>admin@chenzixin.com</p>
+                </div>
+            </div>
+        </div>
+    </div><! --/footerwrap -->
 	
 
 
