--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">INSTANT</a>
+          <a class="navbar-brand" href="index.html">CHRISTEN</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -56,9 +56,9 @@
 	    <div class="container">
 			<div class="row">
 				<div class="col-lg-6 col-lg-offset-3">
-					<h4>HELLO PEOPLE, MY NAME IS</h4>
-					<h1>PAUL SILVA</h1>
-					<h4>WEB DESIGNER, DEVELOPER & GAME ADDICT</h4>
+					<h4>HELLO, WORLD!</h4>
+					<h1>梓莘 过隙录</h1>
+					<h4><!--君子-->博学而日参省乎己，则知明而行无过矣</h4>
 				</div>
 			</div><! --/row -->
 	    </div> <!-- /container -->
@@ -120,11 +120,11 @@
 		<div class="container">
 			<div class="row centered">
 				<div class="col-lg-4">
-					<p><b>WEB DESIGNER, DEVELOPER & GAME ADDICT</b></p>
+					<p><b>WEB DEVELOPER & TECHNICAL SUPPORT</b></p>
 				</div>
 			
 				<div class="col-lg-4">
-					<p>Living in the amazing London.</p>
+					<p>Living in the terrible Beijing.</p>
 				</div>
 				<div class="col-lg-4">
 					<p>admin@chenzixin.com</p>
