--- a/about.html
+++ b/about.html
@@ -114,7 +114,7 @@
                     <p>Living in the terrible Beijing.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>admin@chenzixin.com</p>
+                    <p>admin#chenzixin.com</p>
                 </div>
             </div>
         </div>
