--- a/about.html
+++ b/about.html
@@ -77,31 +77,31 @@
 		</div><! --/row -->
 	</div><! --/container -->
 	
-	<div id="social">
-		<div class="container">
-			<div class="row centered">
-				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-dribbble"></i></a>
-				</div>
-				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-facebook"></i></a>
-				</div>
-				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-twitter"></i></a>
-				</div>
-				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-linkedin"></i></a>
-				</div>
-				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-instagram"></i></a>
-				</div>
-				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-tumblr"></i></a>
-				</div>
-			
-			</div><! --/row -->
-		</div><! --/container -->
-	</div><! --/social -->
+	<!--<div id="social">-->
+		<!--<div class="container">-->
+			<!--<div class="row centered">-->
+				<!--<div class="col-lg-2">-->
+					<!--<a href="#"><i class="fa fa-dribbble"></i></a>-->
+				<!--</div>-->
+				<!--<div class="col-lg-2">-->
+					<!--<a href="#"><i class="fa fa-facebook"></i></a>-->
+				<!--</div>-->
+				<!--<div class="col-lg-2">-->
+					<!--<a href="#"><i class="fa fa-twitter"></i></a>-->
+				<!--</div>-->
+				<!--<div class="col-lg-2">-->
+					<!--<a href="#"><i class="fa fa-linkedin"></i></a>-->
+				<!--</div>-->
+				<!--<div class="col-lg-2">-->
+					<!--<a href="#"><i class="fa fa-instagram"></i></a>-->
+				<!--</div>-->
+				<!--<div class="col-lg-2">-->
+					<!--<a href="#"><i class="fa fa-tumblr"></i></a>-->
+				<!--</div>-->
+			<!---->
+			<!--</div><! --/row &ndash;&gt;-->
+		<!--</div><! --/container &ndash;&gt;-->
+	<!--</div><! --/social &ndash;&gt;-->
 
     <div id="footerwrap">
         <div class="container">
