Signed-off-by: hiclick <hiczx@qq.com>

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="images/favicon.ico">
+    <link rel="shortcut icon" href="/assets/img/favicon.ico">
 
     <title>Christen Note</title>
 
@@ -18,7 +18,7 @@
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy this line! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <!--[if lt IE 9]><script src="/assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -45,7 +45,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="index.html">Home</a></li>
             <li class="active"><a href="about.html">About</a></li>
-            <li><a href="index.html#works">Works</a></li>
+            <li><a href="work.html">Work</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -57,51 +57,51 @@
 			<div class="row">
 				<div class="col-lg-6 col-lg-offset-3">
 				</div>
-			</div><! --/row -->
+			</div><!--/row -->
 	    </div> <!-- /container -->
-	</div><! --/aboutwrap -->
+	</div><!--/aboutwrap -->
 	
 	<div class="container">
 		<div class="row left mt mb">
 			<div class="col-lg-8 col-lg-offset-2">
 				<h2>Christen</h2>
-                <p style="text-align:justify;text-justify:newspaper">My name is <a href="http://chenzixin.com">Chen Zixin</a><sup><span class="glyphicon glyphicon-link" aria-hidden="true"></span></sup>, I am a Chinese software engineer currently living in Dongcheng District of Beijing with my wifi and a cat.</p>
+                <p class="justify">My name is <a href="http://chenzixin.com">Chen Zixin</a><sup><span class="glyphicon glyphicon-link" aria-hidden="true"></span></sup>, I am a Chinese software engineer currently living in Dongcheng District of Beijing with my wifi and a cat.</p>
 
-                <p style="text-align:justify;text-justify:newspaper">When I was young, I wanted to be a lawyer. That was before I got a job as a game editor in <a href="http://www.pconline.cn">PConline</a><sup><span class="glyphicon glyphicon-link" aria-hidden="true"></span></sup> since early 2004. From then on, I seized the good opportunity to take part in web application design, and interact with programers. As time goes on, I knew I would be a developer. I never stopped writing code since May 25, 2007. Many thanks to Alan, Neil and Guitang Yang.</p>
+                <p class="justify">When I was young, I wanted to be a lawyer. That was before I got a job as a game editor in <a href="http://www.pconline.cn">PConline</a><sup><span class="glyphicon glyphicon-link" aria-hidden="true"></span></sup> since early 2004. From then on, I seized the good opportunity to take part in web application design, and interact with programers. As time goes on, I knew I would be a developer. I never stopped writing code since May 25, 2007. Many thanks to Alan, Neil and Guitang Yang.</p>
 
-                <p style="text-align:justify;text-justify:newspaper">I still enjoy Chinese Ancient Culture and Hard Pen Calligraphic. It’s probably because I used to be a liberal art student in <a href="http://www.hust.edu.cn">Hust</a><small> </small><sup><span class="glyphicon glyphicon-link" aria-hidden="true"></span></sup>.</p>
+                <p class="justify">I still enjoy Chinese Ancient Culture and Hard Pen Calligraphic. It’s probably because I used to be a liberal art student in <a href="http://www.hust.edu.cn">Hust</a><small> </small><sup><span class="glyphicon glyphicon-link" aria-hidden="true"></span></sup>.</p>
 
-                <p style="text-align:justify;text-justify:newspaper">You can contact me via email: admin#chenzixin.com</p>
+                <p class="justify">You can contact me via email: admin#chenzixin.com</p>
                 </div>
 
-		</div><! --/row -->
-	</div><! --/container -->
+		</div><!--/row -->
+	</div><!--/container -->
 	
 	<div id="social">
 		<div class="container">
 			<div class="row centered">
 				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-dribbble"></i></a>
+					<a href="#"><i class="fa fa-apple"></i></a>
 				</div>
 				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-facebook"></i></a>
+					<a href="#"><i class="fa fa-weibo"></i></a>
 				</div>
 				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-twitter"></i></a>
+					<a href="#"><i class="fa fa-wechat"></i></a>
 				</div>
 				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-linkedin"></i></a>
+					<a href="#"><i class="fa fa-wordpress"></i></a>
 				</div>
 				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-instagram"></i></a>
+					<a href="#"><i class="fa fa-github"></i></a>
 				</div>
 				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-tumblr"></i></a>
+					<a href="#"><i class="fa fa-html5"></i></a>
 				</div>
 
-			</div><! --/row -->
-		</div><! --/container -->
-	</div><! --/social -->
+			</div>
+		</div>
+	</div>
 
     <div id="footerwrap">
         <div class="container">
@@ -118,7 +118,7 @@
                 </div>
             </div>
         </div>
-    </div><! --/footerwrap -->
+    </div>
 	
 
 
