--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="images/favicon.ico">
+    <link rel="shortcut icon" href="/assets/img/favicon.ico">
 
     <title>Christen Note</title>
 
@@ -18,7 +18,7 @@
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy this line! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <!--[if lt IE 9]><script src="/assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -45,7 +45,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="#works">Works</a></li>
+            <li><a href="work.html">Work</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -57,12 +57,12 @@
 			<div class="row">
 				<div class="col-lg-6 col-lg-offset-3">
 					<h4>HELLO, WORLD!</h4>
-					<h1>梓莘 过隙录</h1>
+					<h1>梓莘 - 过隙录</h1>
 					<h4><!--君子-->博学而日参省乎己，则知明而行无过矣</h4>
 				</div>
-			</div><! --/row -->
+			</div><!--/row -->
 	    </div> <!-- /container -->
-	</div><! --/headerwrap -->
+	</div><!--/headerwrap -->
 	
 	<section id="works"></section>
 	<div class="container">
@@ -87,34 +87,10 @@
 			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
 				<a href="work.html"><img src="assets/img/portfolio/folio06.png" class="img-responsive"></a>
 			</div>
-		</div><! --/row -->
-	</div><! --/container -->
+		</div><!--/row -->
+	</div><!--/container -->
 	
-	<!--<div id="social">-->
-		<!--<div class="container">-->
-			<!--<div class="row centered">-->
-				<!--<div class="col-lg-2">-->
-					<!--<a href="#"><i class="fa fa-dribbble"></i></a>-->
-				<!--</div>-->
-				<!--<div class="col-lg-2">-->
-					<!--<a href="#"><i class="fa fa-facebook"></i></a>-->
-				<!--</div>-->
-				<!--<div class="col-lg-2">-->
-					<!--<a href="#"><i class="fa fa-twitter"></i></a>-->
-				<!--</div>-->
-				<!--<div class="col-lg-2">-->
-					<!--<a href="#"><i class="fa fa-linkedin"></i></a>-->
-				<!--</div>-->
-				<!--<div class="col-lg-2">-->
-					<!--<a href="#"><i class="fa fa-instagram"></i></a>-->
-				<!--</div>-->
-				<!--<div class="col-lg-2">-->
-					<!--<a href="#"><i class="fa fa-tumblr"></i></a>-->
-				<!--</div>-->
-			<!---->
-			<!--</div><! --/row &ndash;&gt;-->
-		<!--</div><! --/container &ndash;&gt;-->
-	<!--</div><! --/social &ndash;&gt;-->
+
 
 	<div id="footerwrap">
 		<div class="container">
@@ -131,7 +107,7 @@
 				</div>
 			</div>
 		</div>
-	</div><! --/footerwrap -->
+	</div><!--/footerwrap -->
 	
 
 
