--- a/work.html
+++ b/work.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="assets/ico/favicon.ico">
+    <link rel="shortcut icon" href="assets/img/favicon.ico">
 
     <title>Christen Note</title>
 
@@ -18,7 +18,7 @@
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy this line! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <!--[if lt IE 9]><script src="/assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -43,9 +43,9 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="#works">Works</a></li>
+            <li class="active"><a href="work.html">Work</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -57,19 +57,19 @@
 			<div class="row">
 				<div class="col-lg-6 col-lg-offset-3">
 					<h4>NEW WEBSITE FOR</h4>
-					<h1>INSTANT</h1>
-					<h4>ROLE: LEAD DESIGNER</h4>
+					<h1>CHRISTEN</h1>
+					<h4>ROLE: R&D Manager</h4>
 				</div>
-			</div><! --/row -->
+			</div><!--/row -->
 	    </div> <!-- /container -->
-	</div><! --/workwrap -->
+	</div><!--/workwrap -->
 	
 	<section id="works"></section>
 	<div class="container">
-		<div class="row centered mt mb">
+		<div class="row left mt mb">
 			<div class="col-lg-8 col-lg-offset-2">
 				<h4>ABOUT THE PROJECT</h4>
-				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+				<p class="justify">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
 			</div>
 			<div class="col-lg-10 col-lg-offset-1 mt">
 				<img class="img-responsive" src="assets/img/pr01.jpg">
@@ -77,53 +77,27 @@
 				<img class="img-responsive" src="assets/img/pr02.jpg">
 			</div>
 
-		</div><! --/row -->
-	</div><! --/container -->
+		</div><!--/row -->
+	</div><!--/container -->
 	
-	<div id="social">
-		<div class="container">
-			<div class="row centered">
-				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-dribbble"></i></a>
-				</div>
-				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-facebook"></i></a>
-				</div>
-				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-twitter"></i></a>
-				</div>
-				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-linkedin"></i></a>
-				</div>
-				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-instagram"></i></a>
-				</div>
-				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-tumblr"></i></a>
-				</div>
-			
-			</div><! --/row -->
-		</div><! --/container -->
-	</div><! --/social -->
 
-	<div id="footerwrap">
-		<div class="container">
-			<div class="row centered">
-				<div class="col-lg-4">
-					<p><b>WEB DESIGNER, DEVELOPER & GAME ADDICT</b></p>
-				</div>
-			
-				<div class="col-lg-4">
-					<p>Living in the amazing London.</p>
-				</div>
-				<div class="col-lg-4">
-					<p>admin@chenzixin.com</p>
-				</div>
-			
-			</div>
-		
-		</div>
-	</div><! --/footerwrap -->
+
+    <div id="footerwrap">
+        <div class="container">
+            <div class="row centered">
+                <div class="col-lg-4">
+                    <p><b>WEB DEVELOPER & TECHNICAL SUPPORT</b></p>
+                </div>
+
+                <div class="col-lg-4">
+                    <p>Living in the terrible Beijing.</p>
+                </div>
+                <div class="col-lg-4">
+                    <p>admin#chenzixin.com</p>
+                </div>
+            </div>
+        </div>
+    </div>
 	
 
 
