--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
 					<a href="#"><i class="fa fa-apple"></i></a>
 				</div>
 				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-weibo"></i></a>
+					<a href="#"><i class="fa fa-google"></i></a>
 				</div>
 				<div class="col-lg-2">
 					<a href="#"><i class="fa fa-wechat"></i></a>
