Signed-off-by: hiclick <hiczx@qq.com>

--- a/404.html
+++ b/404.html
@@ -1,1 +1,10 @@
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Document</title>
+</head>
+<body>
 Sorry this page does not exist =(
+</body>
+</html>
