Signed-off-by: hiclick <hiczx@qq.com>

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="/assets/img/favicon.ico">
 
-    <title>Christen Note</title>
+    <title>About | Christen Note</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -81,22 +81,22 @@
 		<div class="container">
 			<div class="row centered">
 				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-apple"></i></a>
+					<a href="#"><i class="fa fa-facebook"></i></a>
+				</div>
+				<div class="col-lg-2">
+					<a href="#"><i class="fa fa-twitter"></i></a>
 				</div>
 				<div class="col-lg-2">
 					<a href="#"><i class="fa fa-google-plus"></i></a>
 				</div>
 				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-wechat"></i></a>
-				</div>
-				<div class="col-lg-2">
 					<a href="#"><i class="fa fa-wordpress"></i></a>
 				</div>
 				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-github"></i></a>
+					<a href="#"><i class="fa fa-wechat"></i></a>
 				</div>
 				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-html5"></i></a>
+					<a href="#"><i class="fa fa-weibo"></i></a>
 				</div>
 
 			</div>
