--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="/assets/img/favicon.ico">
 
-    <title>Christen Note</title>
+    <title>Work | Christen Note</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -89,8 +89,32 @@
 			</div>
 		</div><!--/row -->
 	</div><!--/container -->
-	
 
+    <div id="social">
+        <div class="container">
+            <div class="row centered">
+                <div class="col-lg-2">
+                    <a href="#"><i class="fa fa-newspaper-o"></i></a>
+                </div>
+                <div class="col-lg-2">
+                    <a href="#"><i class="fa fa-music"></i></a>
+                </div>
+                <div class="col-lg-2">
+                    <a href="#"><i class="fa fa-camera-retro"></i></a>
+                </div>
+                <div class="col-lg-2">
+                    <a href="#"><i class="fa fa-automobile"></i></a>
+                </div>
+                <div class="col-lg-2">
+                    <a href="#"><i class="fa fa-diamond"></i></a>
+                </div>
+                <div class="col-lg-2">
+                    <a href="#"><i class="fa fa-child"></i></a>
+                </div>
+
+            </div>
+        </div>
+    </div>
 
 	<div id="footerwrap">
 		<div class="container">
