--- a/work.html
+++ b/work.html
@@ -80,8 +80,32 @@
 
 		</div><!--/row -->
 	</div><!--/container -->
-	
 
+    <div id="social">
+        <div class="container">
+            <div class="row centered">
+                <div class="col-lg-2">
+                    <a href="#"><i class="fa fa-apple"></i></a>
+                </div>
+                <div class="col-lg-2">
+                    <a href="#"><i class="fa fa-windows"></i></a>
+                </div>
+                <div class="col-lg-2">
+                    <a href="#"><i class="fa fa-linux"></i></a>
+                </div>
+                <div class="col-lg-2">
+                    <a href="#"><i class="fa fa-github"></i></a>
+                </div>
+                <div class="col-lg-2">
+                    <a href="#"><i class="fa fa-html5"></i></a>
+                </div>
+                <div class="col-lg-2">
+                    <a href="#"><i class="fa fa-css3"></i></a>
+                </div>
+
+            </div>
+        </div>
+    </div>
 
     <div id="footerwrap">
         <div class="container">
