Signed-off-by: hiclick <hiczx@qq.com>

--- a/about.html
+++ b/about.html
@@ -81,16 +81,16 @@
 		<div class="container">
 			<div class="row centered">
 				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-facebook"></i></a>
-				</div>
-				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-twitter"></i></a>
+					<a href="#"><i class="fa fa-mobile-phone"></i></a>
 				</div>
 				<div class="col-lg-2">
 					<a href="#"><i class="fa fa-google-plus"></i></a>
 				</div>
 				<div class="col-lg-2">
 					<a href="#"><i class="fa fa-wordpress"></i></a>
+				</div>
+				<div class="col-lg-2">
+					<a href="#"><i class="fa fa-qq"></i></a>
 				</div>
 				<div class="col-lg-2">
 					<a href="#"><i class="fa fa-wechat"></i></a>
