--- a/work.html
+++ b/work.html
@@ -94,13 +94,13 @@
                     <a href="#"><i class="fa fa-linux"></i></a>
                 </div>
                 <div class="col-lg-2">
+                    <a href="#"><i class="fa fa-android"></i></a>
+                </div>
+                <div class="col-lg-2">
+                    <a href="#"><i class="fa fa-cloud"></i></a>
+                </div>
+                <div class="col-lg-2">
                     <a href="#"><i class="fa fa-github"></i></a>
-                </div>
-                <div class="col-lg-2">
-                    <a href="#"><i class="fa fa-html5"></i></a>
-                </div>
-                <div class="col-lg-2">
-                    <a href="#"><i class="fa fa-css3"></i></a>
                 </div>
 
             </div>
