--- a/about.html
+++ b/about.html
@@ -65,11 +65,11 @@
 		<div class="row left mt mb">
 			<div class="col-lg-8 col-lg-offset-2">
 				<h2>Christen</h2>
-                <p class="justify">My name is <a href="http://chenzixin.com">Chen Zixin</a><sup><span class="glyphicon glyphicon-link" aria-hidden="true"></span></sup>, I am a Chinese software engineer currently living in Dongcheng District of Beijing with my wifi and a cat.</p>
+                <p class="justify">My name is <a href="http://chenzixin.com">Chen Zixin</a><sup><i class="fa fa-external-link fa-fw"></i></sup>, I am a Chinese software engineer currently living in Dongcheng District of Beijing with my wifi and a cat.</p>
 
-                <p class="justify">When I was young, I wanted to be a lawyer. That was before I got a job as a game editor in <a href="http://www.pconline.cn">PConline</a><sup><span class="glyphicon glyphicon-link" aria-hidden="true"></span></sup> since early 2004. From then on, I seized the good opportunity to take part in web application design, and interact with programers. As time goes on, I knew I would be a developer. I never stopped writing code since May 25, 2007. Many thanks to Alan, Neil and Guitang Yang.</p>
+                <p class="justify">When I was young, I wanted to be a lawyer. That was before I got a job as a game editor in <a href="http://www.pconline.cn">PConline</a><sup><i class="fa fa-external-link fa-fw"></i></sup> since early 2004. From then on, I seized the good opportunity to take part in web application design, and interact with programers. As time goes on, I knew I would be a developer. I never stopped writing code since May 25, 2007. Many thanks to Alan, Neil and Guitang Yang.</p>
 
-                <p class="justify">I still enjoy Chinese Ancient Culture and Hard Pen Calligraphic. It’s probably because I used to be a liberal art student in <a href="http://www.hust.edu.cn">Hust</a><small> </small><sup><span class="glyphicon glyphicon-link" aria-hidden="true"></span></sup>.</p>
+                <p class="justify">I still enjoy Chinese Ancient Culture and Hard Pen Calligraphic. It’s probably because I used to be a liberal art student in <a href="http://www.hust.edu.cn">Hust</a><sup><i class="fa fa-external-link fa-fw"></i></sup>.</p>
 
                 <p class="justify">You can contact me via email: admin#chenzixin.com</p>
                 </div>
