Signed-off-by: hiclick <hiczx@qq.com>

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 	<section id="works"></section>
 	<div class="container">
 		<div class="row centered mt mb">
-			<h1>My Portfolio</h1>
+			<h1>Portfolio</h1>
 			
 			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
 				<a href="work.html"><img src="assets/img/portfolio/folio01.png" class="img-responsive"></a>
