Signed-off-by: hiclick <hiczx@qq.com>

--- a/work.html
+++ b/work.html
@@ -56,8 +56,7 @@
 	    <div class="container">
 			<div class="row">
 				<div class="col-lg-6 col-lg-offset-3">
-					<h4>NEW WEBSITE FOR</h4>
-					<h1>CHRISTEN</h1>
+					<h1>Resume</h1>
 					<h4>ROLE: R&D Manager</h4>
 				</div>
 			</div><!--/row -->
@@ -67,16 +66,109 @@
 	<section id="works"></section>
 	<div class="container">
 		<div class="row left mt mb">
-			<div class="col-lg-8 col-lg-offset-2">
-				<h4>ABOUT THE PROJECT</h4>
-				<p class="justify">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
-			    <p class="justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            </div>
-			<div class="col-lg-10 col-lg-offset-1 mt">
-				<img class="img-responsive" src="assets/img/pr01.jpg">
-				<br>
-				<img class="img-responsive" src="assets/img/pr02.jpg">
-			</div>
+            <h4>Focus</h4>
+            <ul style="margin-left:15px">
+                <li>Advertising Optimization</li>
+                <li>HTML5 / Flash / JavaScript / CSS</li>
+                <li>Java / Python / Groovy / PHP / Objective-C</li>
+            </ul>
+
+            <h4 class="space">Brief</h4>
+
+            <table class="table table-bordered table-striped table-hover">
+                <tbody>
+                <tr>
+                    <td>PCgroup</td>
+                    <td>2007.03 &#8211; Now</td>
+                    <td>Beijing Haidian</td>
+                    <td>R&amp;D Mananger</td>
+                </tr>
+                <tr>
+                    <td>PConline</td>
+                    <td>2006.08 &#8211; 2007.03</td>
+                    <td>Beijing Haidian</td>
+                    <td>Technical Support</td>
+                </tr>
+                <tr>
+                    <td>PCgames</td>
+                    <td>2004.08 &#8211; 2006.08</td>
+                    <td>Shanghai Xuhui</td>
+                    <td>Senior Editor</td>
+                </tr>
+                <tr>
+                    <td>PCgames</td>
+                    <td>2004.02 &#8211; 2004.08</td>
+                    <td>Guangzhou Tianhe</td>
+                    <td>Editor</td>
+                </tr>
+                </tbody>
+            </table>
+
+            <h4 class="space">Works</h4>
+
+            <table class="table table-striped">
+                <tr>
+                    <td>Tenement</td>
+                    <td>Java + Struts + Versant Open Access JDO + Resin</td>
+                    <td>Code</td>
+                </tr>
+
+                <tr>
+                    <td>iTouch</td>
+                    <td>Java + Struts + JDO + Spring1.2 + AS2.0 + Resin</td>
+                    <td>Code</td>
+                </tr>
+
+                <tr>
+                    <td>Play</td>
+                    <td>Java + Struts + JDO + AS3.0 + Resin</td>
+                    <td>Code</td>
+                </tr>
+
+
+                <tr>
+                    <td><a href="http://mobile.pconline.com.cn/review/0806/1325149.html"  target="_blank">Dopod Diamond Emulator</a></td>
+                    <td>ActionScript 3.0</td>
+                    <td>Code</td>
+                </tr>
+
+                <tr>
+                    <td>Meeting Room</td>
+                    <td>Java + Spring2.5 + ExtJS + jQuery + MySQL</td>
+                    <td>Code</td>
+                </tr>
+
+                <tr>
+                    <td>Work Orders</td>
+                    <td> Java + Spring2.5 + OpenJPA + Resin + Oracle</td>
+                    <td>PM</td>
+                </tr>
+
+                <tr>
+                    <td><a href="http://health.pcbaby.com.cn/" target="_blank">PCbaby Healthlib</a></td>
+                    <td>Java + Spring2.5 + MySQL + Memcache</td>
+                    <td>PM</td>
+                </tr>
+
+                <tr>
+                    <td><a href="http://product.pcbaby.com.cn/" target="_blank">PCbaby Product</a></td>
+                    <td>Java + Spring2.5 + EAV + ExtJS + MySQL + Memcache</td>
+                    <td>PM</td>
+                </tr>
+
+                <tr>
+                    <td>NetBench</td>
+                    <td>Java + Spring3.0 + ExtJS + MySQL</td>
+                    <td>PM</td>
+                </tr>
+
+                <tr>
+                    <td><a href="https://github.com/chenzixin/Lucky5" target="_blank">Lucky5</a></td>
+                    <td>HTML5 + CSS3 + Impress + jQuery</td>
+                    <td>PM</td>
+                </tr>
+
+            </table>
 
 		</div><!--/row -->
 	</div><!--/container -->
