--- a/index.html
+++ b/index.html
@@ -67,26 +67,26 @@
 	<section id="works"></section>
 	<div class="container">
 		<div class="row centered mt mb">
-			<h1>Portfolio</h1>
+			<h1>Portfolio Coming Soon ...</h1>
 			
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="work.html"><img src="assets/img/portfolio/folio01.png" class="img-responsive"></a>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="work.html"><img src="assets/img/portfolio/folio02.png" class="img-responsive"></a>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="work.html"><img src="assets/img/portfolio/folio03.png" class="img-responsive"></a>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="work.html"><img src="assets/img/portfolio/folio04.png" class="img-responsive"></a>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="work.html"><img src="assets/img/portfolio/folio05.png" class="img-responsive"></a>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="work.html"><img src="assets/img/portfolio/folio06.png" class="img-responsive"></a>
-			</div>
+			<!--<div class="col-lg-4 col-md-4 col-sm-4 gallery">-->
+				<!--<a href="work.html"><img src="assets/img/portfolio/folio01.png" class="img-responsive"></a>-->
+			<!--</div>-->
+			<!--<div class="col-lg-4 col-md-4 col-sm-4 gallery">-->
+				<!--<a href="work.html"><img src="assets/img/portfolio/folio02.png" class="img-responsive"></a>-->
+			<!--</div>-->
+			<!--<div class="col-lg-4 col-md-4 col-sm-4 gallery">-->
+				<!--<a href="work.html"><img src="assets/img/portfolio/folio03.png" class="img-responsive"></a>-->
+			<!--</div>-->
+			<!--<div class="col-lg-4 col-md-4 col-sm-4 gallery">-->
+				<!--<a href="work.html"><img src="assets/img/portfolio/folio04.png" class="img-responsive"></a>-->
+			<!--</div>-->
+			<!--<div class="col-lg-4 col-md-4 col-sm-4 gallery">-->
+				<!--<a href="work.html"><img src="assets/img/portfolio/folio05.png" class="img-responsive"></a>-->
+			<!--</div>-->
+			<!--<div class="col-lg-4 col-md-4 col-sm-4 gallery">-->
+				<!--<a href="work.html"><img src="assets/img/portfolio/folio06.png" class="img-responsive"></a>-->
+			<!--</div>-->
 		</div><!--/row -->
 	</div><!--/container -->
 
