--- a/404.html
+++ b/404.html
@@ -5,6 +5,6 @@
     <title>File not found</title>
 </head>
 <body>
-    Sorry this page does not exist =(
+    Sorry this page does not exist! 
 </body>
 </html>
