--- a/404.html
+++ b/404.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>File not found</title>
+    <title>404 | File not found</title>
 </head>
 <body>
-    Sorry this page does not exist! 
+    Sorry this page does not exist!
 </body>
 </html>
