--- a/404.html
+++ b/404.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>404 | File not found</title>
+    <link rel="shortcut icon" href="/assets/img/favicon.ico">
 </head>
 <body>
     Sorry this page does not exist!
