--- a/404.html
+++ b/404.html
@@ -6,6 +6,6 @@
     <link rel="shortcut icon" href="/assets/img/favicon.ico">
 </head>
 <body>
-    Sorry this page does not exist!
+    Sorry this page does not exist, Go <a href="/index.html">Home.</a>
 </body>
 </html>
