--- a/404.html
+++ b/404.html
@@ -1,11 +1,9 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>404 | File not found</title>
-    <link rel="shortcut icon" href="/assets/img/favicon.ico">
-</head>
-<body>
-    Sorry this page does not exist, Go <a href="/index.html">Home.</a>
-</body>
-</html>
+---
+layout: default
+title: "404: Page not found"
+---
+
+<div class="page">
+  <h1 class="page-title">404: Page not found</h1>
+  <p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="/">Head back home</a> to try finding it again.</p>
+</div>
