--- a/404.html
+++ b/404.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: "404: Page not found"
+title: "404: Page not Found"
 ---
 
 <div class="page">
-  <h1 class="page-title">404: Page not found</h1>
+  <h1 class="page-title">404: Page not Found</h1>
   <p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="/">Head back home</a> to try finding it again.</p>
 </div>
