--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 					<p>Living in the terrible Beijing.</p>
 				</div>
 				<div class="col-lg-4">
-					<p>admin#chenzixin.com</p>
+                    <p>admin#<a href="http://chenzixin.com">chenzixin.com</a></p>
 				</div>
 			</div>
 		</div>
