add weibo and github

--- a/work.html
+++ b/work.html
@@ -192,7 +192,7 @@
                     <a href="#"><i class="fa fa-cloud"></i></a>
                 </div>
                 <div class="col-lg-2">
-                    <a href="#"><i class="fa fa-github"></i></a>
+                    <a href="https://github.com/hiclick/hiclick.github.com"><i class="fa fa-github"></i></a>
                 </div>
 
             </div>
