--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
 					<a href="#"><i class="fa fa-google-plus"></i></a>
 				</div>
 				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-wordpress"></i></a>
+					<a href="http://chenzixin.com"><i class="fa fa-wordpress"></i></a>
 				</div>
 				<div class="col-lg-2">
 					<a href="#"><i class="fa fa-qq"></i></a>
@@ -96,7 +96,7 @@
 					<a href="#"><i class="fa fa-wechat"></i></a>
 				</div>
 				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-weibo"></i></a>
+					<a href="http://weibo.com/chenzixin"><i class="fa fa-weibo"></i></a>
 				</div>
 
 			</div>
