--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	    <div class="container">
 			<div class="row">
 				<div class="col-lg-6 col-lg-offset-3">
-					<h4>HELLO, WORLD!</h4>
+					<!--<h4>HELLO, WORLD!</h4>-->
 					<h1>梓莘 - 过隙录</h1>
 					<h4><!--君子-->博学而日参省乎己，则知明而行无过矣</h4>
 				</div>
@@ -94,7 +94,7 @@
         <div class="container">
             <div class="row centered">
                 <div class="col-lg-2">
-                    <a href="#"><i class="fa fa-newspaper-o"></i></a>
+                    <a href="#"><i class="glyphicon glyphicon-book"></i></a>
                 </div>
                 <div class="col-lg-2">
                     <a href="#"><i class="fa fa-music"></i></a>
