--- a/work.html
+++ b/work.html
@@ -56,8 +56,8 @@
 	    <div class="container">
 			<div class="row">
 				<div class="col-lg-6 col-lg-offset-3">
-					<h1>Resume</h1>
-					<h4>ROLE: R&D Manager</h4>
+					<!--<h1>Resume</h1>-->
+					<!--<h4>ROLE: R&D Manager</h4>-->
 				</div>
 			</div><!--/row -->
 	    </div> <!-- /container -->
