--- a/404.html
+++ b/404.html
@@ -4,6 +4,15 @@ title: "404: Page not Found"
 ---
 
 <div class="page">
-  <h1 class="page-title">404: Page not Found</h1>
-  <p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="/">Head back home</a> to try finding it again.</p>
+    <h1 class="page-title">404: Page not Found</h1>
+
+    <p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="/">Head
+        back home</a> to try finding it again.</p>
+
+    {% highlight java %}
+    java.io.FileNotFoundException:
+
+        Response: '404: Not Found' for the current URL
+    {% endhighlight%}
+
 </div>
