更新 404 添加 Java 代码

--- a/404.html
+++ b/404.html
@@ -10,9 +10,9 @@ title: "404: Page not Found"
     <p class="lead"><a href="/">Head back home</a> to try finding it again.</p>
 
     {% highlight java %}
+    //Java code in HTML
     java.io.FileNotFoundException:
-
-        Response: '404: Not Found' for the current URL
+    Response: "404: Not Found" for the current URL
     {% endhighlight%}
 
 </div>
