--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@ title: "404: Page not Found"
     {% highlight java %}
     //Java code in HTML
     java.io.FileNotFoundException:
-    Response: "404: Not Found" for the current URL
+    Response: "404: Not Found";
     {% endhighlight%}
 
 </div>
