--- a/lab/pages/examples/404.html
+++ b/lab/pages/examples/404.html
@@ -302,7 +302,7 @@
                 <i class="fa fa-dashboard"></i> <span>Dashboard</span> <i class="fa fa-angle-left pull-right"></i>
               </a>
               <ul class="treeview-menu">
-                <li><a href="../../index.html"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
+                <li><a href="../../index1.html"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
                 <li><a href="../../index2.html"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
               </ul>
             </li>
@@ -455,7 +455,7 @@
               <h3><i class="fa fa-warning text-yellow"></i> Oops! Page not found.</h3>
               <p>
                 We could not find the page you were looking for.
-                Meanwhile, you may <a href='../../index.html'>return to dashboard</a> or try using the search form.
+                Meanwhile, you may <a href='../../index1.html'>return to dashboard</a> or try using the search form.
               </p>
               <form class='search-form'>
                 <div class='input-group'>
