--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@ title: "404: Page not Found"
 <div class="page">
     <h1 class="page-title">404: Page not Found</h1>
 
-    <p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist.</p>
+    <p class="lead">Sorry, we've misplaced that URL or it's pointing to something that does not exist.</p>
     <p class="lead"><a href="/">Head back home</a> to try finding it again.</p>
 
 {% highlight java %}
