--- a/lab/tutorial/index.html
+++ b/lab/tutorial/index.html
@@ -13,6 +13,7 @@
     <script src="js/prism.js"></script>
     <link rel="stylesheet" href="app/bower_components/normalize-css/normalize.css">
     <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="css/prism.css">
     <title>ECMAScript 6入门</title>
     <link rel="shortcut icon" href="/assets/img/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/assets/img/favicon.ico" type="image/x-icon">
