--- a/404.html
+++ b/404.html
@@ -15,4 +15,17 @@ java.io.FileNotFoundException:
 Response: "404: Not Found";
 {% endhighlight%}
 
+{% highlight html %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Document</title>
+</head>
+<body>
+
+</body>
+</html>
+{% endhighlight %}
+
 </div>
