更新首页作品列表

--- a/index.html
+++ b/index.html
@@ -67,26 +67,46 @@
 	<section id="works"></section>
 	<div class="container">
 		<div class="row centered mt mb">
-			<h1>Portfolio Coming Soon ...</h1>
+			<h1>Portfolio</h1>
 			
-			<!--<div class="col-lg-4 col-md-4 col-sm-4 gallery">-->
-				<!--<a href="work.html"><img src="assets/img/portfolio/folio01.png" class="img-responsive"></a>-->
-			<!--</div>-->
-			<!--<div class="col-lg-4 col-md-4 col-sm-4 gallery">-->
-				<!--<a href="work.html"><img src="assets/img/portfolio/folio02.png" class="img-responsive"></a>-->
-			<!--</div>-->
-			<!--<div class="col-lg-4 col-md-4 col-sm-4 gallery">-->
-				<!--<a href="work.html"><img src="assets/img/portfolio/folio03.png" class="img-responsive"></a>-->
-			<!--</div>-->
-			<!--<div class="col-lg-4 col-md-4 col-sm-4 gallery">-->
-				<!--<a href="work.html"><img src="assets/img/portfolio/folio04.png" class="img-responsive"></a>-->
-			<!--</div>-->
-			<!--<div class="col-lg-4 col-md-4 col-sm-4 gallery">-->
-				<!--<a href="work.html"><img src="assets/img/portfolio/folio05.png" class="img-responsive"></a>-->
-			<!--</div>-->
-			<!--<div class="col-lg-4 col-md-4 col-sm-4 gallery">-->
-				<!--<a href="work.html"><img src="assets/img/portfolio/folio06.png" class="img-responsive"></a>-->
-			<!--</div>-->
+			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
+				<a href="doc/java/"><img src="assets/img/portfolio/folio01.jpg" class="img-responsive"></a>
+			</div>
+            <div class="col-lg-4 col-md-4 col-sm-4 gallery">
+                <a href="doc/flash/"><img src="assets/img/portfolio/folio09.jpg" class="img-responsive"></a>
+            </div>
+			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
+				<a href="doc/python/"><img src="assets/img/portfolio/folio03.jpg" class="img-responsive"></a>
+			</div>
+			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
+				<a href="doc/html/"><img src="assets/img/portfolio/folio05.jpg" class="img-responsive"></a>
+			</div>
+			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
+				<a href="doc/js/"><img src="assets/img/portfolio/folio06.jpg" class="img-responsive"></a>
+			</div>
+            <div class="col-lg-4 col-md-4 col-sm-4 gallery">
+                <a href="doc/css"><img src="assets/img/portfolio/folio07.jpg" class="img-responsive"></a>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-4 gallery">
+                <a href="doc/php/"><img src="assets/img/portfolio/folio02.jpg" class="img-responsive"></a>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-4 gallery">
+                <a href="doc/db/"><img src="assets/img/portfolio/folio04.jpg" class="img-responsive"></a>
+            </div>
+
+            <div class="col-lg-4 col-md-4 col-sm-4 gallery">
+                <a href="doc/ruby/"><img src="assets/img/portfolio/folio08.jpg" class="img-responsive"></a>
+            </div>
+
+            <div class="col-lg-4 col-md-4 col-sm-4 gallery">
+                <a href="doc/ado/"><img src="assets/img/portfolio/folio10.jpg" class="img-responsive"></a>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-4 gallery">
+                <a href="doc/hard/"><img src="assets/img/portfolio/folio11.jpg" class="img-responsive"></a>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-4 gallery">
+                <a href="doc/soft/"><img src="assets/img/portfolio/folio12.jpg" class="img-responsive"></a>
+            </div>
 		</div><!--/row -->
 	</div><!--/container -->
 
