--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
 			<div class="row">
 				<div class="col-lg-6 col-lg-offset-3">
 					<!--<h4>HELLO, WORLD!</h4>-->
-					<h1>梓莘 - 过隙录</h1>
-					<h4><!--君子-->博学而日参省乎己，则知明而行无过矣</h4>
+					<!--<h1>梓莘 - 过隙录</h1>-->
+                    <h1>AutoUpdate</h1>
+					<h4><!--君子-->Every step leaves its print</h4>
 				</div>
 			</div><!--/row -->
 	    </div> <!-- /container -->
@@ -70,7 +71,7 @@
 			<h1>Portfolio</h1>
 			
 			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="doc/java/"><img src="assets/img/portfolio/folio01.jpg" class="img-responsive"></a>
+				<a href="doc/java/"><img src="assets/img/portfolio/folio01-d.jpg" class="img-responsive"></a>
 			</div>
             <div class="col-lg-4 col-md-4 col-sm-4 gallery">
                 <a href="doc/flash/"><img src="assets/img/portfolio/folio09.jpg" class="img-responsive"></a>
