--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					<!--<h4>HELLO, WORLD!</h4>-->
 					<!--<h1>梓莘 - 过隙录</h1>-->
                     <h1>AutoUpdate</h1>
-					<h4><!--君子-->Every step leaves its print</h4>
+					<h4><!--君子-->Every step has its print</h4>
 				</div>
 			</div><!--/row -->
 	    </div> <!-- /container -->
