修正图片瑕疵

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				<div class="col-lg-6 col-lg-offset-3">
 					<!--<h4>HELLO, WORLD!</h4>-->
 					<!--<h1>梓莘 - 过隙录</h1>-->
-                    <h1>AutoUpdate</h1>
+                    <h1>AutoUpDate</h1>
 					<h4><!--君子-->Every step has its print</h4>
 				</div>
 			</div><!--/row -->
@@ -71,42 +71,42 @@
 			<h1>Portfolio</h1>
 			
 			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="doc/java/"><img src="assets/img/portfolio/folio01-d.jpg" class="img-responsive"></a>
+				<a href="doc/java/"><img src="assets/img/portfolio/java-dc.jpg" class="img-responsive"></a>
 			</div>
             <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-                <a href="doc/flash/"><img src="assets/img/portfolio/folio09.jpg" class="img-responsive"></a>
+                <a href="doc/flash/"><img src="assets/img/portfolio/flash-c.jpg" class="img-responsive"></a>
             </div>
 			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="doc/python/"><img src="assets/img/portfolio/folio03.jpg" class="img-responsive"></a>
+				<a href="doc/python/"><img src="assets/img/portfolio/python-c.jpg" class="img-responsive"></a>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="doc/html/"><img src="assets/img/portfolio/folio05.jpg" class="img-responsive"></a>
+				<a href="doc/html/"><img src="assets/img/portfolio/html-c.jpg" class="img-responsive"></a>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="doc/js/"><img src="assets/img/portfolio/folio06.jpg" class="img-responsive"></a>
+				<a href="doc/js/"><img src="assets/img/portfolio/js-c.jpg" class="img-responsive"></a>
 			</div>
             <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-                <a href="doc/css"><img src="assets/img/portfolio/folio07.jpg" class="img-responsive"></a>
+                <a href="doc/css"><img src="assets/img/portfolio/css-c.jpg" class="img-responsive"></a>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-                <a href="doc/php/"><img src="assets/img/portfolio/folio02.jpg" class="img-responsive"></a>
+                <a href="doc/php/"><img src="assets/img/portfolio/php-c.jpg" class="img-responsive"></a>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-                <a href="doc/db/"><img src="assets/img/portfolio/folio04.jpg" class="img-responsive"></a>
+                <a href="doc/db/"><img src="assets/img/portfolio/mysql-c.jpg" class="img-responsive"></a>
             </div>
 
             <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-                <a href="doc/ruby/"><img src="assets/img/portfolio/folio08.jpg" class="img-responsive"></a>
+                <a href="doc/ruby/"><img src="assets/img/portfolio/ruby-c.jpg" class="img-responsive"></a>
             </div>
 
             <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-                <a href="doc/ado/"><img src="assets/img/portfolio/folio10.jpg" class="img-responsive"></a>
+                <a href="doc/ado/"><img src="assets/img/portfolio/ado-c.jpg" class="img-responsive"></a>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-                <a href="doc/hard/"><img src="assets/img/portfolio/folio11.jpg" class="img-responsive"></a>
+                <a href="doc/hard/"><img src="assets/img/portfolio/hard-c.jpg" class="img-responsive"></a>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-                <a href="doc/soft/"><img src="assets/img/portfolio/folio12.jpg" class="img-responsive"></a>
+                <a href="doc/soft/"><img src="assets/img/portfolio/soft-c.jpg" class="img-responsive"></a>
             </div>
 		</div><!--/row -->
 	</div><!--/container -->
