--- a/index.html
+++ b/index.html
@@ -56,10 +56,9 @@
 	    <div class="container">
 			<div class="row">
 				<div class="col-lg-6 col-lg-offset-3">
-					<!--<h4>HELLO, WORLD!</h4>-->
-					<!--<h1>梓莘 - 过隙录</h1>-->
-                    <h1>AutoUpDate</h1>
-					<h4><!--君子-->Every step has its print</h4>
+					<h4>HELLO, WORLD!</h4>
+                    <h1>AUTO UPDATE</h1>
+					<h4><!--君子-->EVERY STEP HAS ITS PRINT</h4>
 				</div>
 			</div><!--/row -->
 	    </div> <!-- /container -->
