--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@
         <div class="container">
             <div class="row centered">
                 <div class="col-lg-2">
-                    <a href="#"><i class="glyphicon glyphicon-book"></i></a>
+                    <a href="#"><i class="fa fa-leanpub"></i></a>
+                    <!-- <a href="#"><i class="glyphicon glyphicon-book"></i></a>-->
                 </div>
                 <div class="col-lg-2">
                     <a href="#"><i class="fa fa-music"></i></a>
@@ -123,10 +124,10 @@
                     <a href="#"><i class="fa fa-camera-retro"></i></a>
                 </div>
                 <div class="col-lg-2">
-                    <a href="#"><i class="fa fa-automobile"></i></a>
+                    <a href="#"><i class="fa fa-film"></i></a>
                 </div>
                 <div class="col-lg-2">
-                    <a href="#"><i class="fa fa-diamond"></i></a>
+                    <a href="#"><i class="fa fa-automobile"></i></a>
                 </div>
                 <div class="col-lg-2">
                     <a href="#"><i class="fa fa-child"></i></a>
